--- a/.github/workflows/add-plugin-version.yml
+++ b/.github/workflows/add-plugin-version.yml
@@ -4,15 +4,15 @@ on:
   workflow_dispatch:
     inputs:
       identifier:
-        description: 'Plugin identifier (e.g. com.github.username.plugin)'
+        description: "Plugin identifier (e.g. com.github.username.plugin)"
         required: true
         type: string
       version:
-        description: 'Version of the plugin (e.g. 1.0.0)'
+        description: "Version of the plugin (e.g. 1.0.0)"
         required: true
         type: string
       status:
-        description: 'Status of the version (stable, testing, development, deprecated)'
+        description: "Status of the version (stable, testing, development, deprecated)"
         required: true
         type: choice
         options:
@@ -20,16 +20,37 @@ on:
           - testing
           - development
           - deprecated
-        default: 'stable'
+        default: "stable"
       kicad_version:
-        description: 'Minimum KiCad version required (e.g. 8.0)'
+        description: "Minimum KiCad version required (e.g. 8.0)"
         required: true
         type: string
       download_url:
-        description: 'URL to download the plugin archive'
+        description: "URL to download the plugin archive"
         required: true
         type: string
-
+  workflow_call:
+    inputs:
+      identifier:
+        description: "Plugin identifier (e.g. com.github.username.plugin)"
+        required: true
+        type: string
+      version:
+        description: "Version of the plugin (e.g. 1.0.0)"
+        required: true
+        type: string
+      status:
+        description: "Status of the version (stable, testing, development, deprecated)"
+        required: true
+        type: string
+      kicad_version:
+        description: "Minimum KiCad version required (e.g. 8.0)"
+        required: true
+        type: string
+      download_url:
+        description: "URL to download the plugin archive"
+        required: true
+        type: string
 
 permissions:
   contents: write
@@ -44,7 +65,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
@@ -55,11 +76,11 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           python scripts/add_plugin_version.py \
-            "${{ github.event.inputs.identifier }}" \
-            "${{ github.event.inputs.version }}" \
-            "${{ github.event.inputs.status }}" \
-            "${{ github.event.inputs.kicad_version }}" \
-            "${{ github.event.inputs.download_url }}"
+            "${{ inputs.identifier }}" \
+            "${{ inputs.version }}" \
+            "${{ inputs.status }}" \
+            "${{ inputs.kicad_version }}" \
+            "${{ inputs.download_url }}"
 
       - name: Check for changes
         id: git-check
@@ -72,5 +93,5 @@ jobs:
       - name: Commit changes
         if: steps.git-check.outputs.changes == 'true'
         run: |
-          git commit -m "Add version ${{ github.event.inputs.version }} for ${{ github.event.inputs.identifier }}"
+          git commit -m "Add version ${{ inputs.version }} for ${{ inputs.identifier }}"
           git push
